# ocr-mcp

./: .assess-fix-timestamp  .cursorrules  .env.example  .gitignore  .mcpbignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AI_MODELS.md  ASSESSMENT.md  CHANGELOG.md  CHANGELOG_20260227_015720.md.bak  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  OCR-MCP_Installation_Progress.md  OCR-MCP_MASTER_PLAN.md  PRD.md  README.md  README_20260227_020025.md.bak  README_20260227_020103.md.bak  README_20260227_020132.md.bak  README_20260227_020156.md.bak  README_20260227_020215.md.bak  README_20260227_020247.md.bak  README_20260227_020252.md.bak  README_20260227_020256.md.bak  README_20260227_020346.md.bak  STATUS.md  backend_check.txt  build.ps1  canon_lide_troubleshoot.py  check_mistral.py  debug_wia.py  docker-compose.yml  extension.toml  fix_glitches.py  (+28 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/prompts/: examples.json  system.md  user.md
backend/: __init__.py  app.py  app_20260227_005423.py.bak  app_20260227_005427.py.bak  app_20260227_005523.py.bak  app_20260227_005535.py.bak  app_20260227_010459.py.bak  app_20260227_010525.py.bak
docs/: AI_FEATURES.md  BACKEND_DEPS.md  BOOK_SCANNING.md  BOOK_SCANNING_PIPELINE.md  INSTALL.md  JUSTFILE.md  MCP_TOOLSET_MATRIX.md  OCR_BACKEND_REQUIREMENTS.md  OCR_MODELS.md  PLACEHOLDER_AUDIT.md  TECHNICAL.md  TESTING.md  WEBAPP_REDESIGN.md
docs/adn-notes/: SEP-1577-in-OCR-MCP-Agentic-Document-Processing.md
docs/assess-reports/: 2026-07-21.md
frontend/: .eslintrc.json  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1771822002921-af1cb88b59504.mjs  vite.config.ts.timestamp-1771822047631-d2f7e23820554.mjs
frontend/src/: App.tsx  index.css
frontend/src/locales/: de.json  en.json  es.json
frontend/src/pages/: AnalysisPage.tsx  BackendsPage.tsx  BatchPage.tsx  ExportPage.tsx  PreprocessingPage.tsx  QualityPage.tsx  ScanViewerPage.tsx  ScannerPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  jobStore.ts  layoutStore.ts  scannerStore.ts  themeStore.ts
mcp-server/: README.md  manifest.json
mcp-server/assets/prompts/: examples.json  system.md  user.md
mcp-server/src/ocr_mcp/: __init__.py  server.py
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs  main.rs
native/windows/: hooks.nsh
scripts/: START_SCANNER_BRIDGE.bat  build-mcpb.ps1  build_mcpb.py  check-repo-standards.ps1  count_tools.py  cua-nsis-config.json  demo_real_ocr.py  download_models.py  ensure_pyyaml_init.py  evolve_sota_catalog.py  generate_test_image.py  install_models.py  run_tests.py  run_webapp.py  scanner_bridge_server.py  setup_dev_env.py  sync-sota.ps1  test_import.py  test_ocr_performance.py  test_ocr_scan.py  test_scanner.py  verify_backends.py
scripts/venv_fixes/: yaml_init.py
src/: lib.rs
src/ocr_mcp/: __init__.py  server.py  transport.py  webapp_runner.py
src/ocr_mcp/backends/: __init__.py  deepseek_backend.py  deepseek_ocr2_backend.py  document_processor.py  dots_backend.py  easyocr_backend.py  florence_backend.py  got_ocr_backend.py  mineru_backend.py  mistral_ocr_backend.py  nemotron_vl_backend.py  olmocr_backend.py  paddleocr_vl_backend.py  ppocr_backend.py  qwen_backend.py  tesseract_backend.py  unlimited_ocr_backend.py
src/ocr_mcp/core/: __init__.py  backend_manager.py  backend_manager_20260227_010402.py.bak  backend_manager_20260227_010413.py.bak  backend_manager_20260227_010434.py.bak  backend_optimizer.py  config.py  error_handler.py  model_manager.py  progress_tracker.py
src/ocr_mcp/corpus/: __init__.py  store.py
src/ocr_mcp/sampling/: ocr_sampling_handler.py
src/ocr_mcp/services/: book_assembler.py  chapter_detector.py  scanner_watcher.py  watch_folder.py
src/ocr_mcp/tools/: __init__.py  _analysis.py  _conversion.py  _corpus.py  _image.py  _prefab.py  _processor.py  _quality.py  _scanner.py  _workflow.py  agentic_document_workflow.py  analysis_tools.py  book_pipeline.py  conversion_tools.py  image_tools_new.py  models.py  ocr_tools.py  ocr_tools_fixed.py  quality_tools.py  scanner_tools.py  workflow_tools.py
src/ocr_mcp/utils/: __init__.py  ml_stack_hints.py  ocr_pip_install.py  poppler_bootstrap.py  pyyaml_health.py  startup_bootstrap.py  tesseract_bootstrap.py
tests/: README.md  __init__.py  conftest.py  conftest_advanced.py  run_tests.py  verify_refactor.py
tests/benchmarks/: test_performance.py
tests/e2e/: test_complete_workflows.py
tests/fuzzing/: test_ocr_fuzzing.py
tests/integration/: test_mcp_tools.py
tests/mocks/: __init__.py  mock_backends.py  mock_document_processor.py  mock_scanner.py
tests/performance/: test_ocr_performance.py
tests/real_ocr/: __init__.py  conftest.py  test_all_registered_backends.py  test_stored_scan_ocr.py
tests/security/: test_input_validation.py
tests/smoke/: test_basic_functionality.py
tests/unit/: test_backend_manager.py  test_backends.py  test_config.py  test_corpus_store.py  test_scanner.py  test_webapp_logging_and_api.py  test_workflow_adapter.py
tests/utils/: test_helpers.py
tools/: repo_stats.py
web_sota/: .biomeignore  biome.json  index.html  package-lock.json  package.json  start.ps1  start.ps1.bak.20260508_202351  vite-plugin-backend-restart.ts  vite.config.ts
web_sota/src/: App.tsx  index.css  ocrDefaultBackend.ts
web_sota/src/common/: apps-catalog.ts
web_sota/src/pages/: book-pipeline.tsx  chat.tsx  dashboard.tsx  editor.tsx  help.tsx  import.tsx  logger.tsx  process.tsx  process_20260227_005514.tsx.bak  scan-viewer.tsx  scanner.tsx  scanner_20260227_005613.tsx.bak  scanner_20260227_005621.tsx.bak  scanner_20260227_005624.tsx.bak  scanner_20260227_005630.tsx.bak  (+3 more)
webapp/: __init__.py  mcp_client.py
webapp/backend/: __init__.py  app.py
webapp/frontend-new/: DEVELOPMENT_PLAN.md  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
(+105 files in other folders)
