[tool.poetry]
name = "ocr-mcp"
version = "0.1.0"
description = "FastMCP server providing comprehensive OCR capabilities to the MCP ecosystem"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ocr_mcp"}]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = {extras = ["server"], version = "^2.13.0"}
transformers = "^4.35.0"
torch = "^2.1.0"
pillow = "^10.0.0"
accelerate = "^0.24.0"
pytesseract = "^0.3.10"
easyocr = "^1.7.0"
pydantic = "^2.0.0"
pywin32 = {version = "^306.0.0", markers = "sys_platform == 'win32'"}
comtypes = "^1.2.0"
opencv-python = "^4.8.0"
PyMuPDF = "^1.23.0"
rarfile = "^4.1"
# Webapp dependencies
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
jinja2 = "^3.1.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
ocr-mcp = "ocr_mcp.server:main"
ocr-mcp-webapp = "webapp.backend.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']
