[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-mcp"
version = "0.2.0"
description = "FastMCP server providing comprehensive OCR capabilities to the MCP ecosystem"
authors = [
    {name = "Sandra", email = "sandra@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing",
    "Topic :: Multimedia :: Graphics",
]
keywords = ["ocr", "mcp", "fastmcp", "computer-vision", "document-processing", "ai", "ml"]

dependencies = [
    "fastmcp[server]>=2.14.5",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "httpx>=0.28.1",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pymupdf>=1.23.0",
    "pypdf>=3.17.0",
    "aiohttp>=3.9.0",
    "structlog>=23.0.0",
    # OCR backends
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    # ML dependencies (optional, can be installed separately)
    # "transformers>=4.35.0",
    # "accelerate>=0.24.0",
    # "sentencepiece>=0.1.99",
    # "protobuf>=4.25.0",
    # "timm>=0.9.0",
    # "einops>=0.7.0",
    # "huggingface-hub>=0.17.0",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.9",
    "pywin32>=310 ; sys_platform == 'win32'",
    "rarfile>=4.1",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.1",
    "comtypes>=1.2.0 ; sys_platform == 'win32'",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "timm>=0.9.0",
    "einops>=0.7.0",
    "huggingface-hub>=0.17.0",
    "scikit-image>=0.22.0",
    "pdf2image>=1.17.0",
    "watchfiles>=0.21.0",
    "ruff>=0.15.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "timm>=0.9.0",
    "einops>=0.7.0",
    "huggingface-hub>=0.17.0",
    "scikit-image>=0.22.0",
    "rarfile>=4.1",
    "pdf2image>=1.17.0",
]
webapp = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]
scanner = [
    "comtypes>=1.2.0; sys_platform == 'win32'",
    "pywin32>=305; sys_platform == 'win32'",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pip-audit>=2.7.0",
    "bandit[toml]>=1.7.0",
    "radon>=6.0.1",
    "pdoc>=14.0.0",
    "pre-commit>=3.6.0",
    "testcontainers>=3.7.1",
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/sandraschi/ocr-mcp"
Repository = "https://github.com/sandraschi/ocr-mcp"
Issues = "https://github.com/sandraschi/ocr-mcp/issues"
Documentation = "https://github.com/sandraschi/ocr-mcp/blob/main/README.md"

[project.scripts]
ocr-mcp = "ocr_mcp.server:main"
ocr-mcp-webapp = "ocr_mcp.webapp_runner:main"
ocr-mcp-test = "scripts.run_tests:main"
ocr-mcp-install-models = "scripts.install_models:main"
ocr-mcp-setup-dev = "scripts.setup_dev_env:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["ocr_mcp", "tests"]


[tool.pytest.ini_options]
minversion = "7.4"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--html=reports/pytest-report.html",
    "--self-contained-html"
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks tests as benchmarks",
    "gpu: marks tests that require GPU",
    "scanner: marks tests that require scanner hardware",
    "ocr_backend: marks tests specific to OCR backends",
    "unit: marks tests as unit tests"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
